# adaptive-mps-initializer

./: PACKAGE_MAP.md  README.md  adaptive_benchmark.csv  api_multiple_functions_results.csv  main.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
examples/: adaptive_initializer_demo.py  analyze_arbitrary_function.py  api_demo.py  api_multiple_functions_csv.py  api_multiple_functions_demo.py  benchmark_adaptive_initializer.py  benchmark_adaptive_initializer_csv.py  benchmark_compressed_mps.py  benchmark_dense_stateprep.py  benchmark_dense_vs_mps.py  circuit_from_function.py  compare_bond2_bond3.py  compare_our_vs_quimb_compression.py  d3_one_layer_demo.py  final_compare_d2_best_vs_d3_one_layer.py  plot_adaptive_benchmark.py  plot_api_multiple_functions.py  scan_d2_layers_vs_d3_fixed.py  simple_usage.py
src/mps_initializer/: __init__.py  adaptive.py  api.py  builders.py  circuit_metrics.py  circuits.py  compression.py  diagnostics.py  metrics.py  mps.py  quimb_utils.py  report.py  state.py
src/mps_layered_initializer/: __init__.py  api.py  bond2_layered.py  bond3_ancilla_layer.py  bond3_gates.py  bond3_one_layer.py  bond3_repeated_layered.py  fixed_bond.py
tests/: test_core.py
