[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adaptive-mps-initializer"
version = "0.1.1"
description = "Adaptive and layered MPS tools for quantum state preparation with Qiskit"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Ashish Nandan" }
]
dependencies = [
    "numpy",
    "scipy",
    "qiskit",
    "quimb",
    "matplotlib",
]

[tool.hatch.build.targets.wheel]
only-include = [
    "src/mps_initializer",
    "src/mps_layered_initializer",
]
sources = [
    "src",
]

[tool.hatch.build.targets.sdist]
include = [
    "src/mps_initializer",
    "src/mps_layered_initializer",
    "README.md",
    "pyproject.toml",
]
