[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptive-mps-initializer"
version = "0.1.2"
description = "Adaptive and layered MPS tools for quantum state preparation with Qiskit"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Ashish Nandan" }
]
dependencies = [
    "numpy",
    "scipy",
    "qiskit",
    "quimb",
    "matplotlib",
]

[tool.setuptools.packages.find]
where = ["src"]
include = [
    "mps_initializer*",
    "mps_layered_initializer*",
]
